Fix center align nav

--- a/src/assets/scss/components/_nav.scss
+++ b/src/assets/scss/components/_nav.scss
@@ -6,6 +6,7 @@
 
     a {
         color: $body-font-color;
+        text-align: center;
     }
 
     &__col {
